--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web dev portfolio</title>
+    <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
     <header>
+        <nav>
+            <h3>Mary</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href=""><button>Hire Me</button></a></li>
+            </ul>
+        </nav>
 
     </header>  
     <main>
